--- a/.gitignore
+++ b/.gitignore
@@ -205,7 +205,7 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-# pytype static type analyzer
+# pytype doc type analyzer
 .pytype/
 
 # Cython debug symbols
