--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,8 @@ tzdata==2022.5
 wheel==0.37.1
 
 djangorestframework==3.14.0
-spotipy==2.20.0
-python-dotenv~=0.21.0
-Pillow==9.2.0
-requests~=2.28.1
 
+git+https://github.com/k4anubhav/django-spotify-banner
 
 whitenoise
 uvicorn
