--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-asgiref==3.5.2
+asgiref==3.6.0
 Django==4.1.2
 sqlparse==0.4.3
-tzdata==2022.5
-wheel==0.37.1
+tzdata==2022.7
+wheel==0.38.4
 
 djangorestframework==3.14.0
+django-cors-headers
 
 git+https://github.com/k4anubhav/spotify-banner
 git+https://github.com/k4anubhav/django-sworker-linkedin
